Spring_quarter_2018/codes/shell_script/error/.err
Traceback (most recent call last):
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/Reload_save_interpolated.py", line 57, in <module>
    decomposed_fluxes=load(source+"zonal_decomposed_fluxes_dic.hkl")
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/Reload_save_interpolated.py", line 31, in load
    dictionary = hkl.load(filename)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/hickle.py", line 616, in load
    h5f = file_opener(fileobj)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/hickle.py", line 154, in file_opener
    h5f = h5.File(filename, mode)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/h5py/_hl/files.py", line 271, in __init__
    fid = make_fid(name, mode, userblock_size, fapl, swmr=swmr)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/h5py/_hl/files.py", line 101, in make_fid
    fid = h5f.open(name, flags, fapl=fapl)
  File "h5py/_objects.pyx", line 54, in h5py._objects.with_phil.wrapper (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/_objects.c:2846)
  File "h5py/_objects.pyx", line 55, in h5py._objects.with_phil.wrapper (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/_objects.c:2804)
  File "h5py/h5f.pyx", line 78, in h5py.h5f.open (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/h5f.c:2123)
IOError: Unable to open file (Unable to open file: name = '/project2/tas1/pragallva/fall_quarter_2017/post_process_data/land_realruthqflux/zonal_decomposed_fluxes_dic.hkl', errno = 2, error message = 'no such file or directory', flags = 0, o_flags = 0)
Traceback (most recent call last):
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/plot_and_save_div_MSE.py", line 72, in <module>
    div=load(source+"div_flux_dict.hkl")
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/plot_and_save_div_MSE.py", line 34, in load
    dictionary = hkl.load(filename)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/hickle.py", line 616, in load
    h5f = file_opener(fileobj)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/hickle.py", line 154, in file_opener
    h5f = h5.File(filename, mode)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/h5py/_hl/files.py", line 271, in __init__
    fid = make_fid(name, mode, userblock_size, fapl, swmr=swmr)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/h5py/_hl/files.py", line 101, in make_fid
    fid = h5f.open(name, flags, fapl=fapl)
  File "h5py/_objects.pyx", line 54, in h5py._objects.with_phil.wrapper (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/_objects.c:2846)
  File "h5py/_objects.pyx", line 55, in h5py._objects.with_phil.wrapper (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/_objects.c:2804)
  File "h5py/h5f.pyx", line 78, in h5py.h5f.open (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/h5f.c:2123)
IOError: Unable to open file (Unable to open file: name = '/project2/tas1/pragallva/fall_quarter_2017/post_process_data/land_realruthqflux/div_flux_dict.hkl', errno = 2, error message = 'no such file or directory', flags = 0, o_flags = 0)
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/interpolation_from_sigma_to_pres_coord.py", line 183
    `
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/plot_stream_wind_etc.py", line 85, in <module>
    u_v           =load(source+"u_v.hkl")
  File "/project2/tas1/pragallva/Fall_quarter_2017//codes/python_scripts/plot_stream_wind_etc.py", line 32, in load
    dictionary = hkl.load(filename)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/hickle.py", line 616, in load
    h5f = file_opener(fileobj)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/hickle.py", line 154, in file_opener
    h5f = h5.File(filename, mode)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/h5py/_hl/files.py", line 271, in __init__
    fid = make_fid(name, mode, userblock_size, fapl, swmr=swmr)
  File "/home/pragallva/Project1/lib/python2.7/site-packages/h5py/_hl/files.py", line 101, in make_fid
    fid = h5f.open(name, flags, fapl=fapl)
  File "h5py/_objects.pyx", line 54, in h5py._objects.with_phil.wrapper (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/_objects.c:2846)
  File "h5py/_objects.pyx", line 55, in h5py._objects.with_phil.wrapper (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/_objects.c:2804)
  File "h5py/h5f.pyx", line 78, in h5py.h5f.open (/home/vagrant/pisi/tmp/h5py-2.7.0-1/work/h5py-2.7.0/h5py/h5f.c:2123)
IOError: Unable to open file (Unable to open file: name = '/project2/tas1/pragallva/fall_quarter_2017/post_process_data/land_realruthqflux/u_v.hkl', errno = 2, error message = 'no such file or directory', flags = 0, o_flags = 0)
slurmstepd-midway797: error: Detected 1 oom-kill event(s) in step 44408328.batch cgroup.
